# i_experiment_like_a_scientist

./: .tool-versions  README.md
python/: memprof.py  recursion.py  requirements.txt
python/feed_reader/: pyproject.toml  setup.cfg
python/feed_reader/src/feedreader/: cli.py  core.py
python/learn_pyside/: README.md  app.py  ptrms.py  signals.py  slots.py
python/learn_pyside/layouts/: layout_colorwidget.py  layouts.py
ruby/: .gitignore  .rubocop.yml
ruby/codeexams/: .irbrc  .rubocop.yml  Gemfile  Guardfile  anagram.rb  anagram_full.rb  bowling_state_machine.rb  deep_symbolize_keys.rb  diamond.rb  dig.rb  dsl.rb  eight_queens.rb  elevator.rb  elevator_minitest.rb  enumerators.rb  flatten.rb  in_memory_query_engine.rb  lru.rb  max_consecutive.rb  merge_intervals.rb  merge_intervals_2.rb  minesweeper.rb  money.rb  ractor.rb  rate.rb  sliding_max.rb  string_compression.rb  string_processing.rb  words-tiny-for-analog.txt  words-tiny.txt
ruby/codeexams/jan2026/: Gemfile  factors.rb  prime.rb
ruby/kata/bankocr/: ocr1.rb
ruby/kata/bankocr/spec/: ocr1_spec.rb  spec_helper.rb
ruby/kata/rails-guides-tutorial/store/: Gemfile
ruby/knight/: .rubocop.yml  Gemfile  Guardfile  knight-smart.rb  knight.rb  knight2.rb  knight_packed_int.rb  notes.md
ruby/leetcode/: helloworld.rb
ruby/paynearme/: fib_iter.rb
ruby/rails/store/config/: credentials.yml.enc  deploy.yml  routes.rb
ruby/rails/store/db/: schema.rb
ruby/ruby4/: .rubocop.yml  Gemfile  Guardfile  README.md  helloworld.rb  mise.toml  ractor.rb  ractor_move.rb  ractor_rpg.rb
(+12 files in other folders)
